set source compatibility to java 8